# videoApp

./: .gitignore  CMakeLists.txt
res/shaders/: OG6Coordinate2.glsl
src/: main.cpp
src/effectTasks/: LOG28Framebuffer1.cpp  LOG28Framebuffer1.h  OG7Camera2.cpp  OG7Camera2.h  Task.cpp  Task.h  TaskTriangle.cpp  TaskTriangle.h  TestClearColor.cpp  TestClearColor.h
src/exclude/: Window.h
src/export/: Context.h  OffscreenCtx.cpp  OffscreenCtx.h  Window.cpp  Window.h
src/glElement/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glCheck.cpp  glCheck.h
src/vendors/glad/: glad.c  glad.h
